[package]
name = "bevy_rng"
version = "0.3.0"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2018"
repository = "https://github.com/rustic-games/bevy_rng"
description = "A Bevy game engine random number generator plugin"
license-file = "LICENSE"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_seeder = "0.2"
rand_xoshiro = "0.6"

bevy-stable = { package = "bevy", version = "0.5", default-features = false, optional = true }
bevy-nightly = { package = "bevy", version = "0.5", git = "https://github.com/bevyengine/bevy", rev = "4f341430469acef478a709aff00bde375743f946", default-features = false, optional = true }

[features]
default = ["bevy-stable"]