[package]
name = "bevy_rng"
version = "0.4.0"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2021"
resolver = "2"
repository = "https://github.com/rustic-games/bevy_rng"
description = "A Bevy game engine random number generator plugin"
license-file = "LICENSE"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_seeder = "0.2"
rand_xoshiro = "0.6"

bevy-stable = { package = "bevy", version = "0.6", default-features = false, optional = true }
bevy-nightly = { package = "bevy", version = "0.7.0-dev", git = "https://github.com/bevyengine/bevy", rev = "703ae5df5d99a5508a74ff7cc3f7514c57304169", default-features = false, optional = true }

[features]
default = ["bevy-stable"]
