[package]
name = "bevy_rng"
version = "0.4.0"
authors = ["Jean Mertz <git@jeanmertz.com>"]
edition = "2021"
repository = "https://github.com/rustic-games/bevy_rng"
description = "A Bevy game engine random number generator plugin"
license-file = "LICENSE"

[dependencies]
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
rand_seeder = "0.2"
rand_xoshiro = "0.6"

bevy-stable = { package = "bevy", version = "0.7", default-features = false, optional = true }
bevy-nightly = { package = "bevy", version = "0.8.0-dev", git = "https://github.com/bevyengine/bevy", rev = "b9102b8836bd2aa07df2732f5364b9ac90accb66", default-features = false, optional = true }

[features]
default = ["bevy-stable"]
